--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Chat Incorporado</title>
-</head>
 <body>
-    <iframe 
-        src="https://app.rosana.io/widget/3DD1CD34D70E471BE372F2F15A952C79/iframe" 
-        width="100%" 
-        style="height: 100%; min-height: 700px" 
-        frameborder="0">
-    </iframe>
+
+
+
+<script async="" src="https://app.rosana.io/widget/3DEAFC8582CCB025C34FC6CA245D0E78/float.js">
+</script>
 </body>
 </html>
